# ISS-blip2-opt-2.7b-pipeline

./: .gitignore  README.md  convert_to_engine.sh  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
model_repository/blip2_ensemble/: config.pbtxt
model_repository/opt_decoder_with_past/: config.pbtxt
model_repository/qformer/: config.pbtxt
model_repository/vision_encoder/: config.pbtxt
scripts/: build_models.sh  convert_to_engine.sh  copy_engines_to_repository.sh  inspect_engine_metadata.sh
src/: export_q_former.py  export_vision_encoder.py  main.py  opt_2.7b_decoder.py
src/inspecting_metadata/: inspect_engine_metadata.py  inspect_onnx_metadata.py
src/lab/: describe_metadata.ipynb  official_lavis_sdk.ipynb  official_transformers_sdk.ipynb
src/onnx_generating/: export_q_former.py  main.py  opt_2.7b_decoder.py
src/sample/: infer_blip2_coco.py
