[project]
name = "blip2-opt-2-7b-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "safetensors",
    "huggingface_hub",
    "onnx",
    "onnxruntime",
    "onnxsim",
    "optimum[onnxruntime]",
    "pillow",
    "accelerate",
    "bitsandbytes"
]
